# cross-seed-manifold-poc

./: .gitignore  LICENSE  README.md  ksweep.py  matched_control.py  mechanism.py  metrics.py  notebook.py  pyproject.toml  run_poc.py  sae.py  sweep.py  synthetic.py  train.py
