[project]
name = "cross-seed-manifold-poc"
version = "0.1.0"
description = "Do multiple SAEs that differ only in seed capture a concept manifold more fully than one SAE? A synthetic-manifold proof of concept."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
    "torch>=2.2",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
notebook = ["marimo>=0.9"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["sae.py", "synthetic.py", "train.py", "metrics.py"]
sources = ["."]
